[gd_scene load_steps=9 format=3 uid="uid://ctu28e0cq28na"]

[ext_resource type="Texture2D" uid="uid://v8olmmf2ndcw" path="res://art/kenney_tiny-dungeon/Tilemap/tilemap_packed.png" id="1_moxw3"]
[ext_resource type="Script" path="res://scenes/char/char.gd" id="1_squua"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x3111"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l1m48"]
radius = 36.0

[sub_resource type="Animation" id="Animation_nvm3n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mdc8k"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_7d84k"]
resource_name = "move"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.0, 0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80baa"]
_data = {
"RESET": SubResource("Animation_nvm3n"),
"idle": SubResource("Animation_mdc8k"),
"move": SubResource("Animation_7d84k")
}

[node name="Char" type="Node2D" groups=["player"]]
script = ExtResource("1_squua")

[node name="MovingObject" type="CharacterBody2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingObject"]
shape = SubResource("CircleShape2D_x3111")

[node name="InteractingRange" type="Area2D" parent="MovingObject"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingObject/InteractingRange"]
shape = SubResource("CircleShape2D_l1m48")

[node name="Marker2D" type="Marker2D" parent="MovingObject"]

[node name="Sprite2D" type="Sprite2D" parent="MovingObject/Marker2D"]
texture = ExtResource("1_moxw3")
region_enabled = true
region_rect = Rect2(64, 144, 16, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="MovingObject/Marker2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_80baa")
}

[node name="Camera2D" type="Camera2D" parent="MovingObject"]
zoom = Vector2(4, 4)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryContainer" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0

[connection signal="body_entered" from="MovingObject/InteractingRange" to="." method="_on_interacting_range_body_entered"]
[connection signal="body_exited" from="MovingObject/InteractingRange" to="." method="_on_interacting_range_body_exited"]
